@@ -2,4 +2,4 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" /><link rel="stylesheet" type="text/css" href="sabayon.css" /><title>
       Developing Sabayon
-    </title></head><body><div id="main"><div id="top"><img src="title01.jpg" border="0" height="229" width="432" alt="Sabayon: user profiles made simple" /><img src="title02.jpg" border="0" height="229" alt="Small screenshot of sabayon" /></div><div id="left"><div class="box"><h2 class="box_title">Download</h2><h4 class="box_header">RPMs</h4><ul><li>Mark provides <a href="http://people.redhat.com/markmc/sabayon/">RPMs for Rawhide</a></li></ul><h4 class="box_header">Source</h4><ul><li><a href="http://people.redhat.com/markmc/sabayon/">tarball</a></li><li><a href="http://cvs.gnome.org/viewcvs/sabayon/">CVS Repository</a></li></ul></div><div class="box"><h2 class="box_title">Contribute</h2><p>There are several ways to contribute to the Sabayon project.</p><p><a href="testing.html">Testing</a>, go here if you want to install sabayon and try it out.</p><p><a href="developing.html">Developing</a>, get the code and try to fix errors and send patches to the maintainers.</p><p><a href="helping.html">Helping out</a> on the <a href="http://mail.gnome.org/mailman/listinfo/sabayon-list/">mailing list</a> and <a href="irc://irc.gnome.org/sabayon">IRC</a> for people having problems, letting them know where to go and what to do.</p></div><div class="box"><h2 class="box_title">Contact</h2><p>You can contact developers <a href="mailto:sabayon-list@gnome.org">sending a mail</a> to the <a href="http://mail.gnome.org/mailman/listinfo/sabayon-list/">Sabayon mailing list</a>. You do not need to be subscribed.</p><p>We are also often available to <a href="irc://irc.gnome.org/sabayon">chat on IRC</a>.</p><p><strong>Server:</strong> irc.gnome.org<br /><strong>Channel:</strong> #sabayon</p></div></div><div id="right"><p>The <a href="http://cvs.gnome.org/viewcvs/sabayon/AUTHORS?view=auto">AUTHORS</a> file has the current people in charge of the Sabayon project maintenance and development.</p><h4>Getting Started</h4><p>If you'd like to start working on Sabayon see the <a href="testing.html">Testing</a> section for how to get the latest CVS sources of Sabayon.</p><h4>Getting in Touch</h4><p>Sabayon hackers use the <a href="http://mail.gnome.org/mailman/listinfo/sabayon-list/">mailing list</a> and irc channel <em>#sabayon</em> on the server <em>irc.gnome.org</em> for keeping in touch and discussing issues regarding the project.</p><h4>The TODO List</h4><p>Sabayon has a <a href="http://cvs.gnome.org/viewcvs/sabayon/TODO?view=auto">TODO</a> list that should be updated frequently describing the work that the developers would like to undertake and will gladly accept patches for.  </p></div><div id="copyright"></div></div></body></html>
+    </title></head><body><div id="main"><div id="top"><img src="title01.jpg" border="0" height="229" width="432" alt="Sabayon: user profiles made simple" /><img src="title02.jpg" border="0" height="229" alt="Small screenshot of sabayon" /></div><div id="left"><div class="box"><h2 class="box_title">Download</h2><h4 class="box_header">RPMs</h4><ul><li>Mark provides <a href="http://people.redhat.com/markmc/sabayon/">RPMs for Rawhide</a></li></ul><h4 class="box_header">Source</h4><ul><li><a href="http://ftp.gnome.org/pub/GNOME/sources/sabayon/">tarball</a></li><li><a href="http://cvs.gnome.org/viewcvs/sabayon/">CVS Repository</a></li></ul></div><div class="box"><h2 class="box_title">Contribute</h2><p>There are several ways to contribute to the Sabayon project.</p><p><a href="testing.html">Testing</a>, go here if you want to install sabayon and try it out.</p><p><a href="developing.html">Developing</a>, get the code and try to fix errors and send patches to the maintainers.</p><p><a href="helping.html">Helping out</a> on the <a href="http://mail.gnome.org/mailman/listinfo/sabayon-list/">mailing list</a> and <a href="irc://irc.gnome.org/sabayon">IRC</a> for people having problems, letting them know where to go and what to do.</p></div><div class="box"><h2 class="box_title">Contact</h2><p>You can contact developers <a href="mailto:sabayon-list@gnome.org">sending a mail</a> to the <a href="http://mail.gnome.org/mailman/listinfo/sabayon-list/">Sabayon mailing list</a>. You do not need to be subscribed.</p><p>We are also often available to <a href="irc://irc.gnome.org/sabayon">chat on IRC</a>.</p><p><strong>Server:</strong> irc.gnome.org<br /><strong>Channel:</strong> #sabayon</p></div></div><div id="right"><p>The <a href="http://cvs.gnome.org/viewcvs/sabayon/AUTHORS?view=auto">AUTHORS</a> file has the current people in charge of the Sabayon project maintenance and development.</p><h4>Getting Started</h4><p>If you'd like to start working on Sabayon see the <a href="testing.html">Testing</a> section for how to get the latest CVS sources of Sabayon.</p><h4>Getting in Touch</h4><p>Sabayon hackers use the <a href="http://mail.gnome.org/mailman/listinfo/sabayon-list/">mailing list</a> and irc channel <em>#sabayon</em> on the server <em>irc.gnome.org</em> for keeping in touch and discussing issues regarding the project.</p><h4>The TODO List</h4><p>Sabayon has a <a href="http://cvs.gnome.org/viewcvs/sabayon/TODO?view=auto">TODO</a> list that should be updated frequently describing the work that the developers would like to undertake and will gladly accept patches for.  </p></div><div id="copyright"></div></div></body></html>
