@@ -1,3 +1,7 @@
+Thu Mar 10 16:39:38 CET 2005 Daniel Veillard <veillard@redhat.com>
+
+	* doc/site.xsl doc/*.html: updated the source tarball download link
+
 2005-03-10  Mark McLoughlin  <markmc@redhat.com>
 
 	* configure.ac: post-release bump to 0.16.
